--- a/implementacion.html
+++ b/implementacion.html
@@ -26,16 +26,21 @@
         
         <main>
             <section id="Algoritmo DDA en 2D">
-                <h2>Algoritmo DDA en 2D</h2>
+                <h2>Algoritmo DDA</h2>
                 <script src="js/p5.js"></script>
                 <script src="js/raycast.js"></script>
             </section>
+            <input type="color" id="wallColorPicker" value="#ffffff">
+            <input type="color" id="skyColorPicker" value="#0077FF"> 
+            <input type="color" id="floorColorPicker" value="#773300"> 
+
         </main>
     </div>
 
     <footer>
         <p>&copy; 2023 caniza1es</p>
     </footer>
+    <script src="js/pintura.js"></script>
     <script src="js/main.js"></script>
     <script src="js/toc.js"></script>
 </body>
